# value_hierarchy

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  main.py  pyproject.toml
.github/workflows/: ci.yml
analysis/: label_cleaner.py  label_cleaner_new.py  relative_scores.py
data/: QualtricsSurvey.txt
domain/: hypothesis_types.py  values.py
generator/: openai_client.py  vignette_generator.py  vignette_reviewer.py
master_psy/: cli.py  pipeline.py
prompts/: prompt_generators.py
scripts/legacy/: README.md
statistical_analysis/: 01_load_clean_qualtrics.py  06_A2_pc1_residualisation.py  07_A3_lobo_lopo.py  08_A4_icc_phase1_vs_phase2.py  09_A5_context_interaction.py  11_B1_block_structure.py  12_B2_clustering_gmm.py  13_B3_cluster_moderation.py  14_B4_theory_profiles.py  sa_utils.py
tests/: test_pipeline_routing.py  test_prompts.py
utils/: DataAnalysis.py  import_qualtrics.py  logging_utils.py
