[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-psy"
version = "0.1.1"
description = "Vignette generator for a psychology master's project"
readme = "README.md"
authors = [{ name = "Sebastian Aeschbach" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "reportlab>=4.0.0",
]
keywords = ["vignette", "openai", "psychology"]

[project.optional-dependencies]
# Development extras: formatting, linting, hooks, tests
dev = [
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pre-commit>=3.0.0",
  "pytest>=8.0.0",
]

[project.scripts]
master-psy = "master_psy.cli:main"

[tool.setuptools]
# Include selected packages explicitly
packages = [
    "master_psy",
    "analysis",
    "domain",
    "generator",
    "output",
    "prompts",
    "utils",
]

[tool.setuptools.package-data]
# No extra data yet

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]


